<resources>
    <string name="app_name" translatable="false">MediWise</string>
    <string name="enter_name" translatable="false"><font size="14">Enter Name</font></string>
    <string name="enter_mobile" translatable="false"><font size="14">Enter Mobile</font></string>
    <string name="enter_age" translatable="false"><font size="14">Enter Age</font></string>
    <string name="enter_address" translatable="false"><font size="14">Enter Address</font></string>
    <string name="enter_mobile_number" translatable="false"><font size="14">Enter Mobile Number</font></string>
    <string name="enter_password" translatable="false"><font size="14">Enter Password</font></string>
    <string name="enter_otp" translatable="false"><font size="14">Enter OTP</font></string>
    <string name="password" translatable="false"><font size="14">Password</font></string>
    <string name="cough_cold">Cough Cold</string>
    <string name="_1_do_you_have_fever_more_than_7_days">1) Do you have fever more than 3 days ?</string>
    <string name="_2_do_you_have_high_grade_fever">2) Do you have high grade fever ?</string>
    <string name="_3_do_you_have_difficulties_in_breathing">3) do you have difficulties in breathing ?</string>
    <string name="_4_do_you_have_difficulties_in_swallowing">4)Do you have difficulties in swallowing ?</string>
    <string name="_5_do_you_have_chest_pain">5) do you have chest pain ?</string>
    <string name="_6_is_your_sputum_red">6) Is your sputum red ?</string>
    <string name="_7_is_there_bleeding_in_eyes">7) Is there bleeding in eyes ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="please_immediate_visit_your_near_doctor">Start following treatment and see your doctor.</string>
    <string name="do_s">Do\'s :</string>
    <string name="take_rest">Take rest.</string>
    <string name="drink_hot_liquid_frequently">Drink hot soup,rice,kanji frequently.</string>
    <string name="drink_ginger_tea">Drink ginger tea.</string>
    <string name="don_ts">Don\'ts :</string>
    <string name="avoid_cold_food_and_drink">Avoid cold food and Drink.</string>
    <string name="avoid_existing_unless_hungry">Avoid Eating unless hungry.</string>
    <string name="avoid_exention_and_journey">Avoid exertion and journey.</string>
    <string name="avoid_food_item_like_dalda_shrikhand_etc">Avoid food item like dahi,shrikhand,lassi etc.</string>
    <string name="medicine">Medicine :</string>
    <string name="_1_homeopathy">1) Homeopathy :</string>
    <string name="_2_ayurvedic">2) Ayurvedic : </string>
    <string name="recurring">Recurring</string>
    <string name="yoga">Yoga :</string>
    <string name="ujjayi_pranayam">ujjayi pranayam</string>
    <string name="uddiyana_bandh">Uddiyana bandh</string>
    <string name="loose_motion">Loose Motion</string>
    <string name="do_you_have_loose_motion_for_more_than_7_days">1) Do you have loose motion for more than 7 days?</string>
    <string name="_2_do_you_have_sever_pain">2) Do you have severe pain?</string>
    <string name="_3_do_you_have_sever_vomitting">3) Do you have severe vomitting?</string>
    <string name="_4_are_you_able_to_pass_the_urine">4) Are you able to pass the urine?</string>
    <string name="_5_is_your_tummy_distended">5) Is your tummy distended?</string>
    <string name="_6_is_their_blood_in_your_stool">6) Is their blood in your stool?</string>
    <string name="drink_rice_kanji_daal_soup_butter_milk">Drink rice kanji,daal soup,butter milk.</string>
    <string name="who_ors_drink">WHO ORS Drink</string>
    <string name="if_hungry_then_eat_item_made_by_old_rice_moong_daal">If hungry then eat item made from old rice,moong daal</string>
    <string name="eat_fruit_like_pomogranate_orange_apple">Eat fruit like pomogranate,orange,apple</string>
    <string name="avoid_saline_id_urine_is_passing_easily">Avoid intravenous saline if you are passing urine freely.</string>
    <string name="don_t_eat_till_you_are_hungry">Don\'t eat till you are hungry.</string>
    <string name="don_t_eat_foods_made_by_besan_mava_spices">Don\'t eat foods made by besan,mava,spices.</string>
    <string name="avoid_non_veg_food">Avoid Non veg food.</string>
    <string name="if_small_volume_stool_with_mucus_and_blood">a)If small volume stool with mucus and fresh blood.</string>
    <string name="if_stool_with_mucus_and_smell_dirty">b)If stool with mucus and foul smell.</string>
    <string name="saline_is_necessary_when_dehydration_is_present">Saline is necessary when dehydration is present.</string>
    <string name="this_app_is_not_a_substitute_for_professional_medical_advice_diagnosis_or_treatment_because_of_something_you_feel_this_app_adviser_if_you_think_you_have_a_medical_emergency_please_visit_professional_adviser">1.	This app is basically for health education. This app will suggest remedial measures to be taken when no doctor is available. This app is not a substitute for professional medical advice diagnosis and treatment. The user has to take responsibility for checking whether the remedial measures or the drugs suggested in this app can be safely used in his particular case .By proceeding further the user agrees not to hold the the app or the appmakers for any damage direct or indirect which the user may incur on following suggestions in the app.</string>
    <string name="ok">OK</string>
    <string name="knee_ache">Knee ache</string>
    <string name="back_ache">Backache</string>
    <string name="fever">Fever</string>
    <string name="general_information">General Information</string>
    <string name="do_the_knee_aache_even_after_rest">Does the knee ache even after rest?</string>
    <string name="is_knee_skin_red">Is knee red and warm?</string>
    <string name="do_you_have_fever">Do you have fever?</string>
    <string name="can_you_lift_the_leg">can you lift the leg?</string>
    <string name="do_you_have_wealiness_of_leg">do you have wealiness of leg?</string>
    <string name="do_you_have_sensation">Do you have Sensation?</string>
    <string name="is_there_fever_for_more_than_three_days">Is there fever for more than three days?</string>
    <string name="does_the_patient_feel_very_sick">Does the patient feel very sick?</string>
    <string name="is_the_fever_same_after_using_simple_measures">Is the fever same after using simple measures?</string>
    <string name="when_the_fever_goes_up_take_paracetamol_and_relax">When you feel disturbed, take Paracetamol and relax.</string>
    <string name="the_body_should_be_kept_warm_let_it_sweat_canary_should_be_taken_drink_soup">The body should be kept warm. Let it sweat. Drink soup</string>
    <string name="allow_the_body_time_to_recover">Allow the body time to recover</string>
    <string name="water_bars_should_be_kept">Moist packs should be kept.</string>
    <string name="if_there_is_no_appetite_do_not_eat">If there is no appetite, do not eat</string>
    <string name="if_there_is_no_fever_above_7_do_not_go_down">If there is no fever above 103, do not go down.</string>
    <string name="ferrum_fosses_6x_per_hour">Ferrum fosses 6x 2 pills every hour </string>
    <string name="sunshmani_vati_according_to_the_age">Sunshmani vati According to the age</string>
    <string name="drugs_to_be_followed">Drugs to be avoided</string>
    <string name="medications_in_the_group_nsaid_e_g_medications_such_as_ibuprofen_nimesulide_can_cause_fever_however_they_cannot_remove_the_cause_of_the_fever_severe_diseases_such_as_pneumonia_can_be_overlooked_due_to_fever_these_drugs_can_cause_acidity_and_cause_stomach_ache_vomiting">Medications in the group NSAID E.g. Medications such as Ibuprofen Nimesulide can reduce fever. However, they cannot remove the cause of the fever. Severe diseases such as pneumonia can be overlooked. These drugs can cause acidity and cause stomach ache, vomiting</string>
    <string name="keep_the_weight_down">Keep the weight down</string>
    <string name="lift_the_pillow_and_place_the_pillow_under_the_rug">Place a pillow under your knees when at rest.</string>
    <string name="on_the_go_do_knee_and_knee_exercises_while_sitting_in_a_chair">On the go, do knee and knee exercises while sitting in a chair</string>
    <string name="when_in_the_back_walk_in_reverse">When in the back, walk in reverse.</string>
    <string name="add_sun_salutations">Add sun salutations.</string>
    <string name="walk_on_the_flat">Walk on the flat terrain.</string>
    <string name="walk_in_water_all_over_your_waist">Walk in a pool with water waist.</string>
    <string name="don_t_let_the_weight_gain">Don\'t let the weight gain.</string>
    <string name="avoid_exercising_like_badminton_ropes">Avoid deep impact exercises like badminton, ropes.</string>
    <string name="avoid_walking_too_far">Skipping walking too far.</string>
    <string name="don_t_go_downhill">Don\'t go downhill.</string>
    <string name="do_not_hurt_the_body_too_much_during_exercise">Do not hurt the body too much during exercise.</string>
    <string name="do_not_take_painkillers">Do not take painkillers for more than 5 days Calcium tablets are of no use.</string>
    <string name="sign_of_dangerous_illness">Sign of dangerous illness.</string>
    <string name="a_person_with_one_or_more_of_the_following_signs_needs_urgent_skilled_medical_help">A person with one or more of the following signs needs urgent skilled medical help.</string>
    <string name="loss_of_large_amount_of_blood_from_anywhere_in_the_body">loss of large amount of blood from anywhere in the body.</string>
    <string name="coughing_up_blood">Coughing up blood.</string>
    <string name="diffuculty_in_breathing">Diffuculty in breathing.</string>
    <string name="the_person_can_not_be_awakaned">The person can not be awakaned.</string>
    <string name="the_person_is_so_weak_he_faunts_when_he_stands">The person is so weak he can not stand.</string>
    <string name="a_day_without_being_able_to_urinate">A day without being able to urinate.</string>
    <string name="a_day_without_being_able_to_drink_any_liquid">A day without being able to drink any liquid.</string>
    <string name="heavy_omitting_oe_sever_diarrhea_that_last_for_one_day_in_adult_or_few_hours_in_a_baby">Heavy vomiting or severe diarrhea that last for one day in adult or few hours in a baby.</string>
    <string name="strong_stomach_pain_with_omitting_without_diarrhea">Strong stomach pain with vomiting without diarrhea.</string>
    <string name="black_tar_like_stools">Black tar like stools.</string>
    <string name="any_continous_pain_that_last_for_more_than_2_days">Any continuous pain that last for more than 2 days.</string>
    <string name="high_fever_which_cannot_be_brought_down_or_last_over_extended_period">High fever which cannot be brought down or lasts over extended period.</string>
    <string name="blood_in_urine_without_pain">Blood in urine without pain.</string>
    <string name="vaginal_bleeding_which_persists_after_treatment">Vaginal bleeding which persists after treatment.</string>
    <string name="vaginal_bleeding_with_foul_smelling_discharge">Vaginal bleeding with foul smelling discharge.</string>
    <string name="home">Home</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="ayurveda">Ayurveda</string>
    <string name="resuources">Resources</string>
    <string name="feed_back">feedback</string>
    <string name="contact_us">contact us</string>
    <string name="about_us">About us</string>
    <string name="choking">Choking</string>
    <string name="wound_bleeding">Wound-Bleeding</string>
    <string name="epilepsy">Epilepsy</string>
    <string name="bleeding_from_the_nose">Bleeding from the nose</string>
    <string name="uncommon_wisdom">Uncommon Wisdom</string>
    <string name="common_problems_and_danger_operation">Common problems and dangers after an operation</string>
</resources>