<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="6dp"
                android:text="@string/sign_of_dangerous_illness"
                android:textColor="@color/deep_orange"
                android:textSize="22dp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/hyper_link"></View>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/a_person_with_one_or_more_of_the_following_signs_needs_urgent_skilled_medical_help"
                android:textColor="@color/deep_red"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/loss_of_large_amount_of_blood_from_anywhere_in_the_body"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/coughing_up_blood"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/diffuculty_in_breathing"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/the_person_can_not_be_awakaned"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/the_person_is_so_weak_he_faunts_when_he_stands"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/a_day_without_being_able_to_urinate"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/a_day_without_being_able_to_drink_any_liquid"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/heavy_omitting_oe_sever_diarrhea_that_last_for_one_day_in_adult_or_few_hours_in_a_baby"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/strong_stomach_pain_with_omitting_without_diarrhea"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/black_tar_like_stools"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/any_continous_pain_that_last_for_more_than_2_days"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/high_fever_which_cannot_be_brought_down_or_last_over_extended_period"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/blood_in_urine_without_pain"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/vaginal_bleeding_which_persists_after_treatment"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:text="@string/vaginal_bleeding_with_foul_smelling_discharge"
                android:textColor="@color/black_orange"
                android:textSize="18dp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>